# AgniB3V

./: .gitignore  README.md  requirements.txt
benchmarks/: benchmarks.py
blender/: README.md  devel.sh  install.sh
freecad/ThermalB3V/: Init.py  InitGui.py  ThermalWorkbench.py  package.xml
freecad/ThermalB3V/commands/: CmdConditionEditor.py  CmdCreateAnalysis.py  CmdCreateFEMMesh.py  CmdCreateFEMMeshRegion.py  CmdExecutePlotter.py  CmdExportMesh.py  CmdInitializeProperties.py  CmdMaterialEditor.py  CmdOpenGlobalProperties.py  CmdSelectDocument.py  Commander.py
freecad/ThermalB3V/constants/: __init__.py  condition_properties.py  global_properties.py  material_properties.py
freecad/ThermalB3V/public/: utils.py
freecad/ThermalB3V/ui/: DialogExport.py  DialogGlobalProperties.py  DialogSelectDocument.py  WidgetConditions.py  WidgetExportable.py  WidgetGlobalProperties.py  WidgetMaterials.py  WidgetViewFactors.py
freecad/ThermalB3V/utils/: firstForCondition.py  labelToCamelCase.py  toSnakeCase.py
opencl/: Cargo.toml  Cube.csv  Makefile  README.md
opencl/src/: examples.rs  fem.rs  gpu.rs  graph.rs  lib.rs  main.rs
opencl/src/fem/: constants.rs  element.rs  engine.rs  examples.rs  executor.rs  explicit_solver.rs  gpu_solver.rs  implicit_solver.rs  mesh.vtk  orbit_manager.rs  parser.rs  point.rs  solver.rs  structures.rs
opencl/src/gpu/: eq_systems_methods_cpu.rs  jacobi_method.cl  jacobi_method.rs  matrix_inversion.cl  matrix_inversion.rs  matrix_mult.cl  matrix_mult.rs  opencl.rs
opencl/tests/: conduction.rs  end_to_end.rs  fem_harcoded.rs
(+199 files in other folders)
