[package]
name = "opencl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.2.2"
env_logger = "0.10.0"
log = "0.4.20"
nalgebra = "0.32.3"
serde = { version = "1.0.188", features = ["derive"] }
vtkio = "0.6"
serde_json = "1.0"

[profile.test]
opt-level = 3
